clusters/arcanis/unifi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-db
  namespace: unifi
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: unifi-db
  template:
    metadata:
      labels:
        app: unifi-db
    spec:
      containers:
      - name: mongodb
        image: mongo:4.4
        ports:

        - containerPort: 27017
          name: mongodb
        volumeMounts:
        - name: data
          mountPath: /data/db
      volumes:
      - name: data
        hostPath:
          path: /storage/appdata/unifi/mongo-data
          type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-controller
  namespace: unifi
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      labels:
        app: unifi-controller
    spec:
      containers:
      - name: unifi
        image: lscr.io/linuxserver/unifi-network-application:latest
        ports:
        - containerPort: 8443
          hostPort: 8443
          name: https-ui
          protocol: TCP
        - containerPort: 8080
          hostPort: 8080
          name: device-adopt
          protocol: TCP
        - containerPort: 10001
          hostPort: 10001
          name: discovery
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        hostPath:
          path: /storage/appdata/unifi/unifi-config
          type: Directory
