clusters/arcanis/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-db
  namespace: unifi
spec:
  selector:
    app: unifi-db
  ports:
  - name: mongodb
    port: 27017
    targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  namespace: unifi
spec:
  selector:
    app: unifi-controller
  ports:
  - name: https-ui
    port: 8443
    targetPort: 8443
  - name: device-adopt
    port: 8080
    targetPort: 8080
  - name: discovery
    port: 10001
    targetPort: 10001
    protocol: UDP
